views: make TabCloseButton a square

Without any stored images, TabCloseButton falls back to the default sizing for
ImageButton, which is 16x14. This change makes it always a square, which makes
the focus ring and ink drop circles instead of ovals.

Bug: 873063
Change-Id: I5c2deec54f768d64be14ee0f9c0adcb52a8d754e
Reviewed-on: https://chromium-review.googlesource.com/1172506
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582903}
Former-commit-id: 1278dfb9260d39986b949151ecd84a333fb2019a